2009-10-22  Marek Habersack  <mhabersack@novell.com>

	* WsdlBuildProvider.cs: a different way to generate code from
	wsdl. Code is generated in the top-level namespace to match .NET

2009-10-12  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: make sure to construct correct physical path
	for every precompiled key in FixVirtualPaths. Fixes bug #546053

2009-09-30 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* BuildManager.cs: load/set the global resources assembly for
	precompiled and merged sites correctly.

2009-09-30  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: if precompilation file contains virtual path
	with trailing slash (e.g. for themes), remove the slash. Fixes bug
	#541271

2009-09-28  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: ResourceProviderHasObject calls
	HttpContext.GetResourceProvider with the current file's path, not
	current request's. Fixes situations when localized control lives
	in a master page or user control. Fixes bug #542484

	* BaseCompiler.cs: introduced a helper property InputVirtualPath
	which returns a VirtualPath object for the current control's
	virtual path.

2009-09-22  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: ResourceProviderHasObject needs to
	close ResourceReader instance obtained from resource provider.

	* DefaultResourceProvider.cs: implemented the ResourceReader
	property. Fixes bug #520397

2009-09-08  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: HaveCustomProfile returns true for profiles
	which don't contain top-level properties. Fixes bug #535655

	* BuildManager.cs: added IsPrecompiled internal property.

	* AppResourcesCompiler.cs: load precompiled site local and global
	resource assemblies from static constructor. Fixes bugs #536138
	and #536143

2009-09-03  Marek Habersack  <mhabersack@novell.com>

	* AppResourcesCompiler.cs: SanitizeResourceName uses VB/C# rules